Fix filter fields collapse

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,10 +23,6 @@ body {
   background-position: center;
 }
 
-.jumbotron .container {
-  padding: 80px 0px;
-}
-
 .banner {
   text-align: center;
   font-family: "Oswald", sans-serif;
